Added responive to colors template v.1.1
Finished colors template

--- a/src/color_template.html
+++ b/src/color_template.html
@@ -15,12 +15,12 @@
         <!--End of Title-->
 
         <!--Start of color template Stone-->
-        <div class="md:justify-center md:items-center grid md:grid-cols-10 mt-16 ml-4 font-bold text-lg">
+        <div class="md:items-center gap-4 grid grid-cols-4 md:grid-cols-10 mt-16 md:ml-4 font-bold text-lg ustify-center">
             <p class="text-stone-50">Stone</p>
             <!-- Example nr.1 -->
             <section>
                 <div>
-                    <div class="bg-stone-100 rounded-lg md:w-3/6 md:h-16">
+                    <div class="bg-stone-100 rounded-lg w-6/6 md:w-4/6 h-16 md:h-16">
                     </div>
                     <div alt="Text color">
                         <p class="pt-2 pb-1 font-bold text-sm text-stone-200">Stone 100</p>
@@ -33,7 +33,7 @@
             <!-- Example nr.2 -->
             <section>
                 <div>
-                    <div class="bg-stone-200 rounded-lg md:w-3/6 md:h-16">
+                    <div class="bg-stone-200 rounded-lg w-6/6 md:w-4/6 h-16 md:h-16">
                     </div>
                     <div alt="Text color">
                         <p class="pt-2 pb-1 font-bold text-sm text-stone-200">Stone 200</p>
@@ -46,7 +46,7 @@
             <!-- Example nr.3 -->
             <section>
                 <div>
-                    <div class="bg-stone-300 rounded-lg md:w-3/6 md:h-16">
+                    <div class="bg-stone-300 rounded-lg w-6/6 md:w-4/6 h-16 md:h-16">
                     </div>
                     <div alt="Text color">
                         <p class="pt-2 pb-1 font-bold text-sm text-stone-200">Stone 300</p>
@@ -59,7 +59,7 @@
             <!-- Example nr.4 -->
             <section>
                 <div>
-                    <div class="bg-stone-400 rounded-lg md:w-3/6 md:h-16">
+                    <div class="bg-stone-400 rounded-lg w-6/6 md:w-4/6 h-16 md:h-16">
                     </div>
                     <div alt="Text color">
                         <p class="pt-2 pb-1 font-bold text-sm text-stone-200">Stone 400</p>
@@ -72,7 +72,7 @@
             <!-- Example nr.5 -->
             <section>
                 <div>
-                    <div class="bg-stone-500 rounded-lg md:w-3/6 md:h-16">
+                    <div class="bg-stone-500 rounded-lg w-6/6 md:w-4/6 h-16 md:h-16">
                     </div>
                     <div alt="Text color">
                         <p class="pt-2 pb-1 font-bold text-sm text-stone-200">Stone 500</p>
@@ -85,7 +85,7 @@
             <!-- Example nr.6 -->
             <section>
                 <div>
-                    <div class="bg-stone-600 rounded-lg md:w-3/6 md:h-16">
+                    <div class="bg-stone-600 rounded-lg w-6/6 md:w-4/6 h-16 md:h-16">
                     </div>
                     <div alt="Text color">
                         <p class="pt-2 pb-1 font-bold text-sm text-stone-200">Stone 600</p>
@@ -98,7 +98,7 @@
             <!-- Example nr.7 -->
             <section>
                 <div>
-                    <div class="bg-stone-700 rounded-lg md:w-3/6 md:h-16">
+                    <div class="bg-stone-700 rounded-lg w-6/6 md:w-4/6 h-16 md:h-16">
                     </div>
                     <div alt="Text color">
                         <p class="pt-2 pb-1 font-bold text-sm text-stone-200">Stone 700</p>
@@ -111,7 +111,7 @@
             <!-- Example nr.8 -->
             <section>
                 <div>
-                    <div class="bg-stone-800 rounded-lg md:w-3/6 md:h-16">
+                    <div class="bg-stone-800 rounded-lg w-6/6 md:w-4/6 h-16 md:h-16">
                     </div>
                     <div alt="Text color">
                         <p class="pt-2 pb-1 font-bold text-sm text-stone-200">Stone 800</p>
@@ -124,7 +124,7 @@
             <!-- Example nr.9 -->
             <section>
                 <div>
-                    <div class="bg-stone-900 rounded-lg md:w-3/6 md:h-16">
+                    <div class="bg-stone-900 rounded-lg w-6/6 md:w-4/6 h-16 md:h-16">
                     </div>
                     <div alt="Text color">
                         <p class="pt-2 pb-1 font-bold text-sm text-stone-200">Stone 900</p>
@@ -137,12 +137,12 @@
         <!-- Author Emanuel Hosu End of color template Stone-->
 
         <!--Start of color template Amber-->
-        <div class="md:justify-center md:items-center grid md:grid-cols-10 mt-16 ml-4 font-bold text-lg">
+        <div class="justify-center md:items-center gap-4 grid grid-cols-4 md:grid-cols-10 mt-16 md:ml-4 font-bold text-lg">
             <p class="text-amber-50">Amber</p>
             <!-- Example nr.1 -->
             <section>
                 <div>
-                    <div class="bg-amber-100 rounded-lg md:w-3/6 md:h-16">
+                    <div class="bg-amber-100 rounded-lg w-6/6 md:w-4/6 h-16 md:h-16">
                     </div>
                     <div alt="Text color">
                         <p class="pt-2 pb-1 font-bold text-amber-200 text-sm">Amber 100</p>
@@ -155,7 +155,7 @@
             <!-- Example nr.2 -->
             <section>
                 <div>
-                    <div class="bg-amber-200 rounded-lg md:w-3/6 md:h-16">
+                    <div class="bg-amber-200 rounded-lg w-6/6 md:w-4/6 h-16 md:h-16">
                     </div>
                     <div alt="Text color">
                         <p class="pt-2 pb-1 font-bold text-amber-200 text-sm">Amber 200</p>
@@ -168,7 +168,7 @@
             <!-- Example nr.3 -->
             <section>
                 <div>
-                    <div class="bg-amber-300 rounded-lg md:w-3/6 md:h-16">
+                    <div class="bg-amber-300 rounded-lg w-6/6 md:w-4/6 h-16 md:h-16">
                     </div>
                     <div alt="Text color">
                         <p class="pt-2 pb-1 font-bold text-amber-200 text-sm">Amber 300</p>
@@ -181,7 +181,7 @@
             <!-- Example nr.4 -->
             <section>
                 <div>
-                    <div class="bg-amber-400 rounded-lg md:w-3/6 md:h-16">
+                    <div class="bg-amber-400 rounded-lg w-6/6 md:w-4/6 h-16 md:h-16">
                     </div>
                     <div alt="Text color">
                         <p class="pt-2 pb-1 font-bold text-amber-200 text-sm">Amber 400</p>
@@ -194,7 +194,7 @@
             <!-- Example nr.5 -->
             <section>
                 <div>
-                    <div class="bg-amber-500 rounded-lg md:w-3/6 md:h-16">
+                    <div class="bg-amber-500 rounded-lg w-6/6 md:w-4/6 h-16 md:h-16">
                     </div>
                     <div alt="Text color">
                         <p class="pt-2 pb-1 font-bold text-amber-200 text-sm">Amber 500</p>
@@ -207,7 +207,7 @@
             <!-- Example nr.6 -->
             <section>
                 <div>
-                    <div class="bg-amber-600 rounded-lg md:w-3/6 md:h-16">
+                    <div class="bg-amber-600 rounded-lg w-6/6 md:w-4/6 h-16 md:h-16">
                     </div>
                     <div alt="Text color">
                         <p class="pt-2 pb-1 font-bold text-amber-200 text-sm">Amber 600</p>
@@ -220,7 +220,7 @@
             <!-- Example nr.7 -->
             <section>
                 <div>
-                    <div class="bg-amber-700 rounded-lg md:w-3/6 md:h-16">
+                    <div class="bg-amber-700 rounded-lg w-6/6 md:w-4/6 h-16 md:h-16">
                     </div>
                     <div alt="Text color">
                         <p class="pt-2 pb-1 font-bold text-amber-200 text-sm">Amber 700</p>
@@ -233,7 +233,7 @@
             <!-- Example nr.8 -->
             <section>
                 <div>
-                    <div class="bg-amber-800 rounded-lg md:w-3/6 md:h-16">
+                    <div class="bg-amber-800 rounded-lg w-6/6 md:w-4/6 h-16 md:h-16">
                     </div>
                     <div alt="Text color">
                         <p class="pt-2 pb-1 font-bold text-amber-200 text-sm">Amber 800</p>
@@ -246,7 +246,7 @@
             <!-- Example nr.9 -->
             <section>
                 <div>
-                    <div class="bg-amber-900 rounded-lg md:w-3/6 md:h-16">
+                    <div class="bg-amber-900 rounded-lg w-6/6 md:w-4/6 h-16 md:h-16">
                     </div>
                     <div alt="Text color">
                         <p class="pt-2 pb-1 font-bold text-amber-200 text-sm">Amber 900</p>
@@ -259,12 +259,12 @@
         <!-- Author Emanuel Hosu End of color template Amber-->
 
         <!--Start of color template Red-->
-        <div class="md:justify-center md:items-center grid md:grid-cols-10 mt-16 ml-4 font-bold text-lg">
+        <div class="justify-center md:items-center gap-4 grid grid-cols-4 md:grid-cols-10 mt-16 md:ml-4 font-bold text-lg">
             <p class="text-red-50">Red</p>
             <!-- Example nr.1 -->
             <section>
                 <div>
-                    <div class="bg-red-100 rounded-lg md:w-3/6 md:h-16">
+                    <div class="bg-red-100 rounded-lg w-6/6 md:w-4/6 h-16 md:h-16">
                     </div>
                     <div alt="Text color">
                         <p class="pt-2 pb-1 font-bold text-red-200 text-sm">Red 100</p>
@@ -277,7 +277,7 @@
             <!-- Example nr.2 -->
             <section>
                 <div>
-                    <div class="bg-red-200 rounded-lg md:w-3/6 md:h-16">
+                    <div class="bg-red-200 rounded-lg w-6/6 md:w-4/6 h-16 md:h-16">
                     </div>
                     <div alt="Text color">
                         <p class="pt-2 pb-1 font-bold text-red-200 text-sm">Red 200</p>
@@ -290,7 +290,7 @@
             <!-- Example nr.3 -->
             <section>
                 <div>
-                    <div class="bg-red-300 rounded-lg md:w-3/6 md:h-16">
+                    <div class="bg-red-300 rounded-lg w-6/6 md:w-4/6 h-16 md:h-16">
                     </div>
                     <div alt="Text color">
                         <p class="pt-2 pb-1 font-bold text-red-200 text-sm">Red 300</p>
@@ -303,7 +303,7 @@
             <!-- Example nr.4 -->
             <section>
                 <div>
-                    <div class="bg-red-400 rounded-lg md:w-3/6 md:h-16">
+                    <div class="bg-red-400 rounded-lg w-6/6 md:w-4/6 h-16 md:h-16">
                     </div>
                     <div alt="Text color">
                         <p class="pt-2 pb-1 font-bold text-red-200 text-sm">Red 400</p>
@@ -316,7 +316,7 @@
             <!-- Example nr.5 -->
             <section>
                 <div>
-                    <div class="bg-red-500 rounded-lg md:w-3/6 md:h-16">
+                    <div class="bg-red-500 rounded-lg w-6/6 md:w-4/6 h-16 md:h-16">
                     </div>
                     <div alt="Text color">
                         <p class="pt-2 pb-1 font-bold text-red-200 text-sm">Red 500</p>
@@ -329,7 +329,7 @@
             <!-- Example nr.6 -->
             <section>
                 <div>
-                    <div class="bg-red-600 rounded-lg md:w-3/6 md:h-16">
+                    <div class="bg-red-600 rounded-lg w-6/6 md:w-4/6 h-16 md:h-16">
                     </div>
                     <div alt="Text color">
                         <p class="pt-2 pb-1 font-bold text-red-200 text-sm">Red 600</p>
@@ -342,7 +342,7 @@
             <!-- Example nr.7 -->
             <section>
                 <div>
-                    <div class="bg-red-700 rounded-lg md:w-3/6 md:h-16">
+                    <div class="bg-red-700 rounded-lg w-6/6 md:w-4/6 h-16 md:h-16">
                     </div>
                     <div alt="Text color">
                         <p class="pt-2 pb-1 font-bold text-red-200 text-sm">Red 700</p>
@@ -355,7 +355,7 @@
             <!-- Example nr.8 -->
             <section>
                 <div>
-                    <div class="bg-red-800 rounded-lg md:w-3/6 md:h-16">
+                    <div class="bg-red-800 rounded-lg w-6/6 md:w-4/6 h-16 md:h-16">
                     </div>
                     <div alt="Text color">
                         <p class="pt-2 pb-1 font-bold text-red-200 text-sm">Red 800</p>
@@ -368,7 +368,7 @@
             <!-- Example nr.9 -->
             <section>
                 <div>
-                    <div class="bg-red-900 rounded-lg md:w-3/6 md:h-16">
+                    <div class="bg-red-900 rounded-lg w-6/6 md:w-4/6 h-16 md:h-16">
                     </div>
                     <div alt="Text color">
                         <p class="pt-2 pb-1 font-bold text-red-200 text-sm">Red 900</p>
@@ -379,8 +379,6 @@
             <!-- End Example nr.9 -->
         </div>
         <!-- Author Emanuel Hosu End of color template Red-->
-
-        
     </section>
     <!--End of global page start-->
 </body>
