--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="./output.css" rel="stylesheet">
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-  <h1 class="text-3xl font-bold underline">
-    Hello world!
-  </h1>
+<body class="bg-stone-950 p-10 text-stone-50">
+  <h1 class="font-bold text-xl">To Do List Test :)</h1>
+  
+  <section>
+    <div class="form-group">
+      <input type="text" id="nombre" class="form-control" placeholder="Introduce tu nombre">
+    </div>
+    
+  </section>
 </body>
 </html>
