--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,53 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-stone-950 p-10 text-stone-50">
-  <h1 class="font-bold text-xl">To Do List Test :)</h1>
+  <!--<h1 class="mb-6 font-bold text-xl">To Do List Test :)</h1>-->
   
+  <!--<section>
+    <form id="task-form" class="flex justify-center">
+      <div class="relative">
+        <input 
+          type="text" 
+          id="task-input" 
+          class="border-2 border-stone-500 focus:border-stone-400 active:border-stone-400 bg-stone-800 focus:bg-stone-800 shadow-lg shadow-stone-700/50 form-control p-3 pr-20 rounded-full w-80 h-9 outline-none placeholder-stone-400" 
+          placeholder="Enter your tasks :)"
+        >
+        <button 
+          type="submit"
+          class="top-1 right-1 absolute border-amber-600 hover:bg-stone-700 px-5 border-l-2 rounded-full h-7 font-bold text-amber-600 hover:text-amber-500 transition-colors duration-200"
+        >
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-4">
+            <path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5" />
+          </svg>        
+        </button>
+      </div> 
+    </form>
+
+    <ul id="task-list" class="space-y-2 mt-6">
+    </ul>
+  </section>-->
+
   <section>
-    <div class="form-group">
-      <input type="text" id="nombre" class="form-control" placeholder="Introduce tu nombre">
-    </div>
+    <div class="bg-stone-200 p-4 rounded-lg w-full h-96 text-stone-800">
+      <form id="task-form">
+          <h1 class="mb-4 font-bold text-lg">To-Do List</h1>
     
+          <div class="relative">
+            <input type="text" id="task-input" class="focus:border-0 focus:outline-none bg-stone-300 shadow-xl p-6 rounded-full w-full h-10 text-stone-900 placeholder:text-stone-900" placeholder="Add your task">
+            <button 
+              type="submit"
+              class="right-0 absolute bg-amber-600 hover:bg-amber-500 px-5 rounded-full h-12 text-stone-50 transition-colors duration-200"
+            >
+              Add
+            </button>
+          </div> 
+      </form>
+
+      <ul id="task-list" class="space-y-2 mt-6">
+      </ul>
+    </div>
   </section>
+
+  <script src="main.js"></script>
 </body>
 </html>
