ADDING CODE To JavaScript

--- a/src/index.html
+++ b/src/index.html
@@ -54,5 +54,13 @@
   </section>
 
   <script src="main.js"></script>
+
+  <div class="bg-white mt-10 p-4 w-32 h-32">
+    <button id="task1" class="justify-center border-2 border-stone-500 bg-stone-50 rounded-full w-6 h-6" onclick="deleteTask()">
+    </button>
+  </div>
+  
+
+  </button>
 </body>
 </html>
